# pressw_application

./: .gitignore  .pre-commit-config.yaml  ASSESMENT_DEFINITION.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agent_states.py  app.py  chef_recepies_agent.py  prompts.py
app/agent_tools/: cooking_ware.py  google_search.py  llm.py
