[project]
name = "pressw-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "google-search-results>=2.4.2",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.11",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]
